fix arraylist remove